[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spaceexpress"  # This is required
version = "0.1.2"
description = "A Python package for spatial transcriptomics"
authors = [{name = "Yeojin Kim", email = "ykim3030@gatech.edu"}]
dependencies = []  # Add any dependencies here if necessary
